fix blurry border; add custom options

--- a/src/components/ImageView/ImageViewSettingsPanel/ImageViewSettingsPanelComponent.scss
+++ b/src/components/ImageView/ImageViewSettingsPanel/ImageViewSettingsPanelComponent.scss
@@ -51,6 +51,11 @@
             margin-right: 5px;
         }
     }
+
+    hr {
+        margin: 15px;
+        border: 1px solid $light-gray3;
+    }
 }
 
 .dropdown-color {
